added some stuff

--- a/index.html
+++ b/index.html
@@ -19,4 +19,6 @@
         <li><a href= "http://github.com/William-R-Wilson" target = "_blank">Github</a></li>
     </ul>
     
+    <p>The site was not designed in the 90s!  Images are mine.  Thanks!</p>
+    
 </body>
