--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="content">
         <p class = "title">Figured I'd get a homepage!</p><br />
         <p>I'm a jack of all trades, currently employed as a nonprofit bookkeeper.  I am learning Ruby on Rails and web development, among other things.</p>
-        <p>Here's a link to a twitter clone I built, following Michael Hartl's <a href="https://www.railstutorial.org/" target = "_blank">Rails Tutorial</a>.  I hope to put more online soon!</p>  
+        <p>Here's a link (click on the image) to a twitter clone I built, following Michael Hartl's <a href="https://www.railstutorial.org/" target = "_blank">Rails Tutorial</a>.  I hope to put more online soon!</p>  
         
         <div class="project-img-container"><a href="https://murmuring-ocean-5657.herokuapp.com/"><img src="assets/sample_app.jpg"></a></div>
 
