--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <p>Here's a link (click on the image) to a twitter clone I built, following Michael Hartl's <a href="https://www.railstutorial.org/" target = "_blank">Rails Tutorial</a>.</p> 
         <a href="https://murmuring-ocean-5657.herokuapp.com/"><img src="assets/images/sample_app.jpg"></a></div>
         
-        <div class="project-img-container"><p>Here's a <a href = "calculator.html">simple calculator</a> I built using basic CSS and JavaScript</p>
+        <div class="project-img-container">
+        <p>Here's a <a href = "calculator.html">simple calculator</a> I built using basic CSS and JavaScript</p>
         <a href="calculator.html"><img src="assets/images/calculator.png"></a></div>
 
         
