--- a/calculator.html
+++ b/calculator.html
@@ -14,6 +14,7 @@
 <body>
 
   <p>This is a simple calculator, made with basic CSS, JavaScript, and HTML.  It performs basic arithmetic functions on two numbers.</p>
+  <p>Back to <a href="index.html">home</a></p>
 
 <div class = "container">
 
