change sample rails app to check register

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <p>I like to build things and solve problems using Ruby, Ruby on Rails, and Javascript.</p>
                
         <div class="project-img-container">
-        <p>Here's a link (click on the image) to a twitter clone I built, following Michael Hartl's <a href="https://www.railstutorial.org/" target = "_blank">Rails Tutorial</a>.</p> 
-        <a href="https://murmuring-ocean-5657.herokuapp.com/"><img src="assets/images/sample_app.jpg"></a></div>
+        <p>Here's a link (click on the image) to a simple check register I built using Rails.</p> 
+        <a href="https://young-eyrie-1944.herokuapp.com/"><img src="assets/images/check_register.jpg"></a></div>
         
         <div class="project-img-container">
         <p>Here's a <a href = "calculator.html">simple calculator</a> I built using basic CSS and JavaScript</p>
