--- a/calculator.html
+++ b/calculator.html
@@ -34,16 +34,17 @@
     <span class = "button" onclick="getValue(5)">5</span>
     <span class = "button" onclick="getValue(6)">6</span>
     <span class = "button" onclick="getOperation('*')">*</span>
-       <span class = "button" onclick = "clearScreen()">C</span>
+    <span class = "button" onclick = "clearScreen()">C</span>
   </div>
   <div class = "row">
     <span class = "button" onclick="getValue(7)">7</span>
     <span class = "button" onclick="getValue(8)">8</span>
     <span class = "button" onclick="getValue(9)">9</span>
     <span class = "button" onclick = "getOperation('-')">-</span>
+    <span class = "button" onclick = "backSpace()"><<</span>
   </div>
     <div class = "row">
-      <span class = "button" onclick="getValue(0)">0</span>
+    <span class = "button" onclick="getValue(0)">0</span>
     <span class = "button" onclick = "getValue('.')">.</span>
     <span class = "button" onclick = "getOperation('+')">+</span>
  
