--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         
         <div class="project-img-container">
         <p>Here's a <a href = "calculator.html">simple calculator</a> I built using basic CSS and JavaScript</p>
-        <a href="calculator.html"><img src="assets/images/calculator.png"></a></div>
+        <a href="calculator.html"><img src="assets/images/calculator.gif"></a></div>
 
         
     </div>
