add bootstrap theme

--- a/calculator.html
+++ b/calculator.html
@@ -3,9 +3,9 @@
 <head>
   <meta http-equiv="Content-Type" content = "text/html; charset=UTF-8" />
   <script src="assets/javascript/calculator.js"></script>
-  <link rel="stylesheet" type="text/css" href="assets/css/calculator.css">
-  <link href="assets/css/application.css" rel="stylesheet">
-  <link href="assets/css/normalize.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/calculator.css">
+  <link href="css/application.css" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
   
 
   <title>Javascript Calculator</title>
