--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="calculator.html" class="portfolio-box">
-                        <img src="assets/images/calculator.png" class="img-responsive" alt="">
+                        <img src="assets/images/calculator.gif" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
