link to check register app

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div class="col-lg-3 col-sm-6">
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="https://immense-atoll-4646.herokuapp.com/" class="portfolio-box">
                         <img src="assets/images/check_register.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
