add new project

--- a/index.html
+++ b/index.html
@@ -130,9 +130,26 @@
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter">
+            <div class="col-lg-1">
+            </div>
+
                 <div class="col-lg-3 col-sm-6">
+                    <a href="reporting.html" class="portfolio-box">
+                        <img src="assets/images/reporting/admin view.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Rails
+                                </div>
+                                <div class="project-name">
+                                    Custom Time and Expense reporting
+                                </div>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                
+                <div class="col-lg-3 col-sm-6">
                     <a href="https://immense-atoll-4646.herokuapp.com/" class="portfolio-box">
                         <img src="assets/images/check_register.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -147,7 +164,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-3 col-sm-6">
                     <a href="calculator.html" class="portfolio-box">
                         <img src="assets/images/calculator.gif" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -162,13 +179,31 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-1">
                 </div>
             </div>
         </div>
     </section>
 
     <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Contact</h2>
+                    <hr class="primary">
+                </div>
+                <div class="col-lg-3 col-lg-offset-1 text-center">
+                    <span class="footer"><a href="http://github.com/William-R-Wilson">GITHUB</a></span>
+                </div>
+                <div class="col-lg-3 text-center">
+                    <a href="mailto:your-williamrwilson@gmail.com">WILLIAMRWILSON@GMAIL.COM</a>
+                </div>
+                <div class="col-lg-3 text-center">
+                    <a href="http://semanticerror.net">BLOG</a>
+                </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- jQuery -->
