--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="header-content-inner">
                 <h1>William R. wilson</h1>
                 <hr>
-                <p>I like to solve problems for small businesses and nonprofits</p>
+                <p>Ruby on Rails.  AngularJS.  HTML.  CSS.  JavaScript.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -88,7 +88,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading"></h2>
                     <hr class="light">
-                    <p class="text-faded">Custom Web Apps. Excel Wizardry.  Quickbooks Wisdom.</p>
+                    <p class="text-faded">Solving problems for small business and nonprofits</p>
                 </div>
             </div>
         </div>
@@ -110,15 +110,13 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                        <h3>Web Applications</h3>
-                        <p class="text-muted">I build web applications customised for your workflow</p>
+                        <h3>Custom Web Applications</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
                         <h3>Web Pages</h3>
-                        <p class="text-muted">I build web pages so customers can find you</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -128,6 +126,14 @@
     </section>
 
     <section class="no-padding" id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Portfolio Projects</h2>
+                    <hr class="primary">
+                </div>
+            </div>
+        </div>
         <div class="container-fluid">
             <div class="row no-gutter">
             <div class="col-lg-1">
@@ -135,7 +141,7 @@
 
                 <div class="col-lg-3 col-sm-6">
                     <a href="reporting.html" class="portfolio-box">
-                        <img src="assets/images/reporting/admin view.png" class="img-responsive" alt="">
+                        <img src="assets/images/reporting/dashboard.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -150,21 +156,6 @@
                 </div>
                 
                 <div class="col-lg-3 col-sm-6">
-                    <a href="https://immense-atoll-4646.herokuapp.com/" class="portfolio-box">
-                        <img src="assets/images/check_register.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Rails
-                                </div>
-                                <div class="project-name">
-                                    Online check register
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-3 col-sm-6">
                     <a href="calculator.html" class="portfolio-box">
                         <img src="assets/images/calculator.gif" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -174,6 +165,21 @@
                                 </div>
                                 <div class="project-name">
                                     Calculator made in Vanilla JavaScript
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <a href="http://codepen.io/williamrwilson/pen/BNLZaz" class="portfolio-box">
+                        <img src="assets/images/sketchpad.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    JavaScript
+                                </div>
+                                <div class="project-name">
+                                    Simple Sketchpad
                                 </div>
                             </div>
                         </div>
@@ -196,7 +202,7 @@
                     <span class="footer"><a href="http://github.com/William-R-Wilson">GITHUB</a></span>
                 </div>
                 <div class="col-lg-3 text-center">
-                    <a href="mailto:your-williamrwilson@gmail.com">WILLIAMRWILSON@GMAIL.COM</a>
+                    <a href="mailto:williamrwilson@gmail.com">WILLIAMRWILSON at GMAIL.COM</a>
                 </div>
                 <div class="col-lg-3 text-center">
                     <a href="http://semanticerror.net">BLOG</a>
