--- a/reporting.html
+++ b/reporting.html
@@ -38,6 +38,64 @@
 </head>
 
 <body>
+
+<body id="page-top">
+
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">William R. Wilson</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="page-scroll" href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#description">Description</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+
+
+
+    <section id="description">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Custom Expense and Time Reporting</h2>
+                        <p>A custom web application, built with Ruby on Rails, deployed and in use</p>  
+                            <ul class = "reporting">
+                                <li>Custom, responsive CSS</li>
+                                <li>Custom authentication and authorization</li>
+                                <li>Printable views</li>
+                                <li>Administrative users have full access to customize</li>
+                            </ul>
+                    
+                    <hr class="primary">
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
     <div class = "col-lg-3 col-sm-6">
     </div>
     <div class = "col-lg-4 col-sm-6">
@@ -71,8 +129,6 @@
          <li class="slide">
             <img src="assets/images/reporting/validations2.png" alt="Image 5" width="200"/>
          </li>
-
-         
       </ul>
     </div>
     </div>
@@ -92,7 +148,7 @@
                     <span class="footer"><a href="http://github.com/William-R-Wilson">GITHUB</a></span>
                 </div>
                 <div class="col-lg-3 text-center">
-                    <a href="mailto:your-williamrwilson@gmail.com">WILLIAMRWILSON@GMAIL.COM</a>
+                    <a href="mailto:williamrwilson@gmail.com">WILLIAMRWILSON at GMAIL.COM</a>
                 </div>
                 <div class="col-lg-3 text-center">
                     <a href="http://semanticerror.net">BLOG</a>
