fix some alignment issues

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                        <h3>Custom Web Applications</h3>
+                        <h3>Web Applications</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -154,7 +154,21 @@
                         </div>
                     </a>
                 </div>
-                
+                <div class="col-lg-3 col-sm-6">
+                    <a href="http://codepen.io/williamrwilson/pen/BNLZaz" class="portfolio-box">
+                        <img src="assets/images/sketchpad.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    JavaScript
+                                </div>
+                                <div class="project-name">
+                                    Simple Sketchpad
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>                
                 <div class="col-lg-3 col-sm-6">
                     <a href="calculator.html" class="portfolio-box">
                         <img src="assets/images/calculator.gif" class="img-responsive" alt="">
@@ -170,21 +184,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-3 col-sm-6">
-                    <a href="http://codepen.io/williamrwilson/pen/BNLZaz" class="portfolio-box">
-                        <img src="assets/images/sketchpad.png" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    JavaScript
-                                </div>
-                                <div class="project-name">
-                                    Simple Sketchpad
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+
                 <div class="col-lg-1">
                 </div>
             </div>
@@ -198,12 +198,13 @@
                     <h2 class="section-heading">Contact</h2>
                     <hr class="primary">
                 </div>
-                <div class="col-lg-3 col-lg-offset-1 text-center">
-                    <span class="footer"><a href="http://github.com/William-R-Wilson">GITHUB</a></span>
-                </div>
-                <div class="col-lg-3 text-center">
+                <div class="col-lg-3 col-lg-offset-2 text-center">
                     <a href="mailto:williamrwilson@gmail.com">WILLIAMRWILSON at GMAIL.COM</a>
                 </div>
+                <div class="col-lg-3 text-center">
+                    <span class="footer"><a href="http://github.com/William-R-Wilson">GITHUB</a></span>
+                </div>
+
                 <div class="col-lg-3 text-center">
                     <a href="http://semanticerror.net">BLOG</a>
                 </div>
