styling change to contact

--- a/index.html
+++ b/index.html
@@ -199,14 +199,14 @@
                     <hr class="primary">
                 </div>
                 <div class="col-lg-3 col-lg-offset-2 text-center">
-                    <a href="mailto:williamrwilson@gmail.com">WILLIAMRWILSON at GMAIL.COM</a>
+                    <span class="footer"><a href="mailto:williamrwilson@gmail.com">WILLIAMRWILSON at GMAIL.COM</a></span>
                 </div>
                 <div class="col-lg-3 text-center">
                     <span class="footer"><a href="http://github.com/William-R-Wilson">GITHUB</a></span>
                 </div>
 
                 <div class="col-lg-3 text-center">
-                    <a href="http://semanticerror.net">BLOG</a>
+                    <span class="footer"><a href="http://semanticerror.net">BLOG</a></span>
                 </div>
                 </div>
             </div>
