--- a/reporting.html
+++ b/reporting.html
@@ -64,6 +64,9 @@
                         <a class="page-scroll" href="#description">Description</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#images">Images</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -80,7 +83,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Custom Expense and Time Reporting</h2>
-                        <p>A custom web application, built with Ruby on Rails, deployed and in use</p>  
+                        <p>A custom web application, built with Ruby on Rails, deployed and in use.  To see it in action,
+                            <a class="page-scroll" href="#contact">contact me!</a></p>  
                             <ul class = "reporting">
                                 <li>Custom, responsive CSS</li>
                                 <li>Custom authentication and authorization</li>
@@ -95,46 +99,46 @@
 
     </section>
 
-
-    <div class = "col-lg-3 col-sm-6">
-    </div>
-    <div class = "col-lg-4 col-sm-6">
-    <div id="MainDiv">
-        <img src="assets/images/reporting/admin view.png" alt="" id="MainImage" width="800" height="600"/>
-           <div id="child">
-           <img id="Next" src="assets/images/reporting/right.png" class="img-responsive NextButton"/>
-           <img id="Previous" src="assets/images/reporting/left.png" class="img-responsive PreButton"/>
-       </div>
-    </div>
-    <div id="slider">
-       <ul class="slides">
-         <li class="slide">
-            <img src="assets/images/reporting/admin view.png" alt="Image 1" width="200"/>
-         </li>
-         <li class="slide">
-            <img src="assets/images/reporting/dashboard.png" alt="Image 2" width="200"/>
-         </li>
-         <li class="slide">
-            <img src="assets/images/reporting/printable view.png" alt="Image 3" width="200"/>
-         </li>
-         <li class="slide">
-            <img src="assets/images/reporting/responsive.png" alt="Image 4" width="200"/>
-         </li>
-         <li class="slide">
-            <img src="assets/images/reporting/user view.png" alt="Image 5" width="200"/>
-         </li>
-         <li class="slide">
-            <img src="assets/images/reporting/validations.png" alt="Image 5" width="200"/>
-         </li>
-         <li class="slide">
-            <img src="assets/images/reporting/validations2.png" alt="Image 5" width="200"/>
-         </li>
-      </ul>
-    </div>
-    </div>
-    <div class = "col-lg-4 col-sm-6">
-    </div>
-
+    <section id="images">
+        <div class = "col-lg-3 col-sm-6">
+        </div>
+        <div class = "col-lg-4 col-sm-6">
+        <div id="MainDiv">
+            <img src="assets/images/reporting/admin view.png" alt="" id="MainImage" width="800" height="600"/>
+               <div id="child">
+               <img id="Next" src="assets/images/reporting/right.png" class="img-responsive NextButton"/>
+               <img id="Previous" src="assets/images/reporting/left.png" class="img-responsive PreButton"/>
+           </div>
+        </div>
+        <div id="slider">
+           <ul class="slides">
+             <li class="slide">
+                <img src="assets/images/reporting/admin view.png" alt="Image 1" width="200"/>
+             </li>
+             <li class="slide">
+                <img src="assets/images/reporting/dashboard.png" alt="Image 2" width="200"/>
+             </li>
+             <li class="slide">
+                <img src="assets/images/reporting/printable view.png" alt="Image 3" width="200"/>
+             </li>
+             <li class="slide">
+                <img src="assets/images/reporting/responsive.png" alt="Image 4" width="200"/>
+             </li>
+             <li class="slide">
+                <img src="assets/images/reporting/user view.png" alt="Image 5" width="200"/>
+             </li>
+             <li class="slide">
+                <img src="assets/images/reporting/validations.png" alt="Image 5" width="200"/>
+             </li>
+             <li class="slide">
+                <img src="assets/images/reporting/validations2.png" alt="Image 5" width="200"/>
+             </li>
+          </ul>
+        </div>
+        </div>
+        <div class = "col-lg-4 col-sm-6">
+        </div>
+    </section>
 
 
     <section id="contact">
@@ -144,20 +148,19 @@
                     <h2 class="section-heading">Contact</h2>
                     <hr class="primary">
                 </div>
-                <div class="col-lg-3 col-lg-offset-1 text-center">
+                <div class="col-lg-3 col-lg-offset-2 text-center">
+                    <span class="footer"><a href="mailto:williamrwilson@gmail.com">WILLIAMRWILSON at GMAIL.COM</a></span>
+                </div>
+                <div class="col-lg-3 text-center">
                     <span class="footer"><a href="http://github.com/William-R-Wilson">GITHUB</a></span>
                 </div>
+
                 <div class="col-lg-3 text-center">
-                    <a href="mailto:williamrwilson@gmail.com">WILLIAMRWILSON at GMAIL.COM</a>
-                </div>
-                <div class="col-lg-3 text-center">
-                    <a href="http://semanticerror.net">BLOG</a>
+                    <span class="footer"><a href="http://semanticerror.net">BLOG</a></span>
                 </div>
                 </div>
             </div>
-        </div>
     </section>
-
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
