--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     </a>
                 </div>                
                 <div class="col-lg-3 col-sm-6">
-                    <a href="calculator.html" class="portfolio-box">
+                    <a href="http://codepen.io/williamrwilson/full/JdGJLE/" class="portfolio-box">
                         <img src="assets/images/calculator.gif" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
