--- a/index.html
+++ b/index.html
@@ -136,10 +136,8 @@
         </div>
         <div class="container-fluid">
             <div class="row no-gutter">
-            <div class="col-lg-1">
-            </div>
 
-                <div class="col-lg-3 col-sm-6">
+                <div class="col-lg-3 col-lg-offset-1 col-sm-6">
                     <a href="reporting.html" class="portfolio-box">
                         <img src="assets/images/reporting/dashboard.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -154,24 +152,10 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-3 col-sm-6">
-                    <a href="http://codepen.io/williamrwilson/pen/BNLZaz" class="portfolio-box">
-                        <img src="assets/images/sketchpad.png" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    JavaScript
-                                </div>
-                                <div class="project-name">
-                                    Simple Sketchpad
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>                
+             
                 <div class="col-lg-3 col-sm-6">
                     <a href="http://codepen.io/williamrwilson/full/JdGJLE/" class="portfolio-box">
-                        <img src="assets/images/calculator.gif" class="img-responsive" alt="">
+                        <img src="assets/images/calculator.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -184,9 +168,22 @@
                         </div>
                     </a>
                 </div>
-
-                <div class="col-lg-1">
+                                <div class="col-lg-3 col-sm-6">
+                    <a href="http://codepen.io/williamrwilson/full/JdGJLE/" class="portfolio-box">
+                        <img src="assets/images/tictactoe.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    JavaScript
+                                </div>
+                                <div class="project-name">
+                                    Tic Tac Toe with Computer opponent
+                                </div>
+                            </div>
+                        </div>
+                    </a>
                 </div>
+
             </div>
         </div>
     </section>
@@ -194,18 +191,21 @@
     <section id="contact">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+                <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact</h2>
                     <hr class="primary">
                 </div>
-                <div class="col-lg-3 col-lg-offset-2 text-center">
+                <div class="col-lg-2 col-lg-offset-2 text-center">
                     <span class="footer"><a href="mailto:williamrwilson@gmail.com">WILLIAMRWILSON at GMAIL.COM</a></span>
                 </div>
-                <div class="col-lg-3 text-center">
+                <div class="col-lg-2 text-center">
+                    <span class = "footer"><a href="http://codepen.io/williamrwilson">CODEPEN</a></span>
+                </div>
+                <div class="col-lg-2 text-center">
                     <span class="footer"><a href="http://github.com/William-R-Wilson">GITHUB</a></span>
                 </div>
 
-                <div class="col-lg-3 text-center">
+                <div class="col-lg-2 text-center">
                     <span class="footer"><a href="http://semanticerror.net">BLOG</a></span>
                 </div>
                 </div>
