--- a/reporting.html
+++ b/reporting.html
@@ -92,12 +92,13 @@
     </section>
 
     <section id="slideshow">
+        <div class = "container">
         <div class = "col-lg-6 col-lg-offset-3 text-center">
     	        <button onclick = "goLeft()" id = "left"> <<< </button>
                 <button onclick = "goRight()" id = "right"> >>> </button>
                 <blockquote id = "text">Users only access the actions they need</blockquote>	
                 <img id = "slide" src = "assets/images/reporting/user view.png" />
-            
+        </div>
     	</div>
     </section>
 
@@ -105,22 +106,26 @@
     <section id="contact">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+                <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact</h2>
                     <hr class="primary">
                 </div>
-                <div class="col-lg-3 col-lg-offset-2 text-center">
+                <div class="col-lg-2 col-lg-offset-2 text-center">
                     <span class="footer"><a href="mailto:williamrwilson@gmail.com">WILLIAMRWILSON at GMAIL.COM</a></span>
                 </div>
-                <div class="col-lg-3 text-center">
+                <div class="col-lg-2 text-center">
+                    <span class = "footer"><a href="http://codepen.io/williamrwilson">CODEPEN</a></span>
+                </div>
+                <div class="col-lg-2 text-center">
                     <span class="footer"><a href="http://github.com/William-R-Wilson">GITHUB</a></span>
                 </div>
 
-                <div class="col-lg-3 text-center">
+                <div class="col-lg-2 text-center">
                     <span class="footer"><a href="http://semanticerror.net">BLOG</a></span>
                 </div>
                 </div>
             </div>
+        </div>
     </section>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
