--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Portfolio Projects</h2>
+                    <h2 class="section-heading">Sampe Projects</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -137,7 +137,7 @@
         <div class="container-fluid">
             <div class="row no-gutter">
 
-                <div class="col-lg-3 col-lg-offset-1 col-sm-6">
+                <div class="col-lg-3 col-sm-6">
                     <a href="reporting.html" class="portfolio-box">
                         <img src="assets/images/reporting/dashboard.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -152,7 +152,23 @@
                         </div>
                     </a>
                 </div>
-             
+
+                <div class="col-lg-3 col-sm-6">
+                    <a href="booking.html" class="portfolio-box">
+                        <img src="assets/images/booking/calendar_view.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Rails
+                                </div>
+                                <div class="project-name">
+                                    Facility Rental Management
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
                 <div class="col-lg-3 col-sm-6">
                     <a href="http://codepen.io/williamrwilson/full/JdGJLE/" class="portfolio-box">
                         <img src="assets/images/calculator.png" class="img-responsive" alt="">
