--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
     <section class="no-padding" id="portfolio">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Sampe Projects</h2>
+                <div class="col-md-12 text-center">
+                    <h2 class="section-heading">Sample Projects</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -137,7 +137,7 @@
         <div class="container-fluid">
             <div class="row no-gutter">
 
-                <div class="col-lg-3 col-sm-6">
+                <div class="col-md-3 col-xs-12">
                     <a href="reporting.html" class="portfolio-box">
                         <img src="assets/images/reporting/dashboard.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -153,7 +153,7 @@
                     </a>
                 </div>
 
-                <div class="col-lg-3 col-sm-6">
+                <div class="col-md-3 col-xs-12">
                     <a href="booking.html" class="portfolio-box">
                         <img src="assets/images/booking/calendar_view.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -169,7 +169,7 @@
                     </a>
                 </div>
 
-                <div class="col-lg-3 col-sm-6">
+                <div class="col-md-3 col-xs-12">
                     <a href="http://codepen.io/williamrwilson/full/JdGJLE/" class="portfolio-box">
                         <img src="assets/images/calculator.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -184,7 +184,7 @@
                         </div>
                     </a>
                 </div>
-                                <div class="col-lg-3 col-sm-6">
+                                <div class="col-md-3 col-xs-12">
                     <a href="http://codepen.io/williamrwilson/full/YXbqgY/" class="portfolio-box">
                         <img src="assets/images/tictactoe.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
