change blockquote to h3

--- a/booking.html
+++ b/booking.html
@@ -85,7 +85,7 @@
                     <h2 class="section-heading">Facility Rental</h2>
                     <p>A custom web application, built with Ruby on Rails, deployed and in use.  To see it in action,
                       <a class="page-scroll" href="#contact">contact me!</a></p>
-                    <p>I built this app to streamline the workflow for an organization that rents its facilities
+                    <p>I built this app to streamline the workflow for an organization that rents facilities
                       out to groups.  It uses Devise for authentication and Bootstrap for layout.  I plan on connecting it
                     with Quickbooks soon, using xml and the <a href="https://github.com/qbwc/qbwc">qbwc gem</a>.</p>
                 </div>
