--- a/reporting.html
+++ b/reporting.html
@@ -101,7 +101,7 @@
         <div class = "col-lg-6 col-lg-offset-3 text-center">
     	        <button onclick = "goLeft()" id = "left"> <<< </button>
                 <button onclick = "goRight()" id = "right"> >>> </button>
-                <blockquote id = "text">Custom authorization provides access to functions based on the user's role</blockquote>
+                <h3 id = "text">Custom authorization provides access to functions based on the user's role</h3>
                 <img id = "slide" src = "assets/images/reporting/user view.png" />
         </div>
     	</div>
