change buttons and layout for image sliders

--- a/booking.html
+++ b/booking.html
@@ -95,11 +95,11 @@
     </section>
 
     <section id="slideshow">
-        <div class = "container">
-        <div class = "col-lg-6 col-lg-offset-3 text-center">
-    	        <button onclick = "goLeft()" id = "left"> <<< </button>
-                <button onclick = "goRight()" id = "right"> >>> </button>
-                <h3 id = "text">Calendar view allows you to see all scheduled visitors</h3>
+        <div class = "row">
+        <div class = "col-md-8 col-md-offset-2 text-center">
+              <h3 id = "text">Calendar view allows you to see all scheduled visitors</h3>
+              <button onclick = "goLeft()" id = "left", class = "btn btn-danger"> <<< </button>
+              <button onclick = "goRight()" id = "right", class = "btn btn-danger"> >>> </button>
                 <img id = "slide" src = "assets/images/booking/calendar_view.png" />
         </div>
     	</div>
