--- a/index.html
+++ b/index.html
@@ -53,12 +53,6 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#services">Services</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
                     <li>
@@ -74,56 +68,12 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>William R. wilson</h1>
+                <h1>William R. Wilson</h1>
                 <hr>
-                <p>Ruby on Rails.  AngularJS.  HTML.  CSS.  JavaScript.</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <p><strong>Web Development with Ruby on Rails, Meteor, AngularJS</strong></p>
             </div>
         </div>
     </header>
-
-    <section class="bg-primary" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading"></h2>
-                    <hr class="light">
-                    <p class="text-faded">Solving problems for small business and nonprofits</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
-                    <hr class="primary">
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                        <h3>Web Applications</h3>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>Web Pages</h3>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                </div>
-             </div>
-        </div>
-    </section>
 
     <section class="no-padding" id="portfolio">
         <div class="container">
