added note to tic-tac-toe

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
                                 <div class="project-name">
                                     Tic Tac Toe with Computer opponent
                                 </div>
+                                <p>Works best in Chrome</p>
                             </div>
                         </div>
                     </a>
