--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         </div>
                     </a>
                 </div>
-                                <div class="col-md-3 col-xs-12">
+                <div class="col-md-3 col-xs-12">
                     <a href="http://codepen.io/williamrwilson/pen/YXbqgY/" class="portfolio-box">
                         <img src="assets/images/tictactoe.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -149,6 +149,23 @@
                     </a>
                 </div>
 
+            </div>
+            <div class="row no-gutter">
+              <div class="col-md-6 col-md-offset-3 col-xs-12">
+                <a href="http://www.semanticerror.net/uncategorized/water-monitoring-database/" class="portfolio-box">
+                    <img src="assets/images/googlemaps.png" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Rails, JavaScript, and Google Maps API
+                            </div>
+                            <div class="project-name">
+                                Water Monitoring Database
+                            </div>
+                        </div>
+                    </div>
+                </a>
+              </div>
             </div>
         </div>
     </section>
