update reporting and booking css

--- a/reporting.html
+++ b/reporting.html
@@ -61,35 +61,29 @@
 
 
 
-    <section id="description">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Custom Expense and Time Reporting</h2>
-                    <p>A custom web application, built with Ruby on Rails, deployed and in use.  To see it in action,
-                      <a class="page-scroll" href="#contact">contact me!</a></p>
-                    <p>I built this application for two purposes:  to practice some web fundamentals, and
-                    to ease some pain points in how the organization was doing things.  Rather than using a responsive
-                    framework like Bootstrap, I built custom responsive CSS.  The authorization and authentication are also custom
-                    coded.  Recently I added a smidgen of AJAX and jQuery on the top to improve the user experience.
-                    I plan on connecting it with Quickbooks soon, using xml and the <a href="https://github.com/qbwc/qbwc">qbwc gem</a>.</p>
-                </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Custom Expense and Time Reporting</h2>
+                <p>A custom web application, built with Ruby on Rails, deployed and in use.  To see it in action,
+                  <a class="page-scroll" href="#contact">contact me!</a></p>
+                <p>I built this application for two purposes:  to practice some web fundamentals, and
+                to ease some pain points in how the organization was doing things.  Rather than using a responsive
+                framework like Bootstrap, I built custom responsive CSS.  The authorization and authentication are also custom
+                coded.  Recently I added a smidgen of AJAX and jQuery on the top to improve the user experience.</p>
             </div>
         </div>
 
-    </section>
 
-    <section id="slideshow">
       <div class = "row">
-      <div class = "col-md-8 col-md-offset-2 text-center">
+        <div class = "col-md-8 col-md-offset-2 text-center">
     	        <button onclick = "goLeft()" id = "left", class="btn btn-danger"> <<< </button>
                 <button onclick = "goRight()" id = "right", class="btn btn-danger"> >>> </button>
                 <h3 id = "text">Custom authorization provides access to functions based on the user's role</h3>
                 <img id = "slide" src = "assets/images/reporting/user view.png" />
         </div>
     	</div>
-    </section>
-
+  </div>
 
     <section id="contact">
         <div class="container">
