--- a/booking.html
+++ b/booking.html
@@ -62,6 +62,7 @@
 
 
         <div class="container">
+          <section>
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Facility Rental</h2>
@@ -81,6 +82,7 @@
                 <img id = "slide" src = "assets/images/booking/calendar_view.png" />
         </div>
     	</div>
+    </section>
     </div>
 
 
