--- a/reporting.html
+++ b/reporting.html
@@ -60,8 +60,9 @@
     </nav>
 
 
-
     <div class="container">
+      <section>
+
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Custom Expense and Time Reporting</h2>
@@ -83,6 +84,7 @@
                 <img id = "slide" src = "assets/images/reporting/user view.png" />
         </div>
     	</div>
+    </section>
   </div>
 
     <section id="contact">
